--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,7 +29,7 @@
 <footer>
 Created with &hearts; by <span class="name">GA</span>
 </footer>
-<script src="fundamentals/wdi-fundamntals-memorygame/starter-code/main.js"></script>
+<script src="main.js"></script>
 </body>
 
 
